assets/source/sass/navigation/_header.scss
@use "sass:map";

//$brand-height: calc(var(--c-header--logotype-height, 6) * var(--base, 8px));
$brand-text-color: var(--c-header--brand-color, var(--color-black, #000));

//Spacing
.c-header .c-header__flex-content {
    display: flex;
    justify-content: space-between;
    align-items: center;
    align-content: center;
    gap: calc((var(--base) * 2));

    //Remove auto space between buttons, rely on gap
    .c-button + .c-button {
        margin-left: 0;
    }
}

// Logo
.c-header.c-header--business .c-logotype:not(.c-brand .c-logotype),
.c-header.c-header--casual .c-logotype:not(.c-brand .c-logotype) {
    display: block;
    width: auto;
    margin: auto;
    max-width: 50vw;
}

body.mega-menu-open.mega-menu-mobile {
    .c-header--sticky {
        height: 100%;
        width: 100%;
        overflow: auto;
        position: fixed;
    }
    &.sticky-header {
        overflow: hidden;
    }
}

#sticky-header {
    z-index: 6;
}

/* Remove body scroll */
body.mega-menu-open {
    .c-header--sticky {
        &:not(.c-header--flexible) {
            height: 100%;
            width: 100%;
            overflow: auto;
            position: fixed;
        }

        &.c-header--flexible {
            .c-megamenu {
                max-height: unset;
                min-height: 100vh;
                position: absolute;
                padding-top: 0;
                padding-bottom: 0;
            }

            .c-megamenu__menu {
                max-height: calc(100vh - (var(--base) * 20));
                overflow: scroll;
                padding-bottom: calc(var(--base) * 4);
                padding-top: calc(var(--base) * 4);
            }
        }

        .c-megamenu {
            height: 100%;
            width: 100%;
            overflow: auto;
            position: fixed;
            max-height: calc(100vh - 120px);
        }

        .c-megamenu.c-megamenu--cover {
            min-height: calc(100vh - 120px);
        }
    }

    &.sticky-header {
        overflow: hidden;
    }
}

